Add support for 1.16.5 and older